--- a/assets/css/styles.less
+++ b/assets/css/styles.less
@@ -11,6 +11,7 @@ body {
     color: @color-primary;
 
     @import 'mixins.less';
+    @import './custom/loader.less';
     
     @import 'custom/menu.less';
 }
