ajustes em css, form e fonte

--- a/assets/css/custom/menu.less
+++ b/assets/css/custom/menu.less
@@ -8,15 +8,16 @@
 
         .navbar-header {
             .navbar-brand {
+                font-family: 'MsMadi';
                 color: @color-third;
-                text-transform: uppercase;
                 font-weight: 600;
-                font-size: 18px;
+                font-size: 25px;
                 letter-spacing: 2px;
                 transition: all ease .5s;
 
                 .ef {
                     color: @color-primary;
+                    font-family: 'MsMadi';
                 }
 
                 &:hover {
@@ -30,7 +31,6 @@
                 li {
                     a {
                         color: @color-third;
-                        text-transform: uppercase;
                         font-weight: 600;
                         font-size: 18px;
                         letter-spacing: 2px;
