--- a/assets/css/mixins.less
+++ b/assets/css/mixins.less
@@ -2,3 +2,8 @@
     font-family: "Roboto_Medium";
     src: url("../fonts/Roboto-Medium.ttf");
 }
+
+@font-face {
+    font-family: "MsMadi";
+    src: url("../fonts/MsMadi-Regular.ttf");
+}
