--- a/assets/css/styles.less
+++ b/assets/css/styles.less
@@ -9,9 +9,14 @@
 body {
     background-color: @color-third;
     color: @color-primary;
+    // background-image: url('../img/background.png');
 
     @import 'mixins.less';
     @import './custom/loader.less';
     
     @import 'custom/menu.less';
+
+    // PAGES
+    @import './custom/login.less';
+    @import './custom/home.less';
 }
