--- a/assets/css/custom/login.less
+++ b/assets/css/custom/login.less
@@ -1,3 +1,25 @@
 .login {
-    
+    .title {
+        text-align: center;
+    }
+
+    form {
+        max-width: 560px;
+        width: 100%;
+        margin: 0 auto;
+        padding: 20px 10px;
+        background-color: #FFF;
+        border-radius: 5px;
+        box-shadow: 0px 0px 5px;
+
+        .form-group{
+            input {
+                height: 40px;
+            }
+        }
+
+        .btn {
+            transition: all ease .5s;
+        }
+    }
 }
