--- a/assets/css/mixins.less
+++ b/assets/css/mixins.less
@@ -7,3 +7,13 @@
     font-family: "MsMadi";
     src: url("../fonts/MsMadi-Regular.ttf");
 }
+
+h1 {
+    font-family: 'MsMadi';
+    font-weight: 600;
+    font-size: 50px;
+}
+
+.btn {
+    transition: all ease .5s;
+}
