--- a/assets/css/custom/home.less
+++ b/assets/css/custom/home.less
@@ -7,33 +7,33 @@
 
     form {
         .form-group {
-            .group-radios {
-                display: flex;
-                justify-content: center;
-                align-items: center;
+            // .group-radios {
+            //     display: flex;
+            //     justify-content: center;
+            //     align-items: center;
 
-                .radios {
-                    display: flex;
-                    justify-content: center;
-                    align-items: center;
-                    margin: 0 5px;
-                    padding: 10px;
-                    border-radius: 5px;
-                    background-color: @color-bedroom;
-                    height: 60px;
+            //     .radios {
+            //         display: flex;
+            //         justify-content: center;
+            //         align-items: center;
+            //         margin: 0 5px;
+            //         padding: 10px;
+            //         border-radius: 5px;
+            //         background-color: @color-bedroom;
+            //         height: 60px;
 
-                    input, label {
-                        margin: 0;
-                        padding: 0;
-                    }
+            //         input, label {
+            //             margin: 0;
+            //             padding: 0;
+            //         }
 
-                    label {
-                        font-size: 12px;
-                        text-transform: capitalize;
-                        margin-left: 5px;
-                    }
-                }
-            }
+            //         label {
+            //             font-size: 12px;
+            //             text-transform: capitalize;
+            //             margin-left: 5px;
+            //         }
+            //     }
+            // }
 
             .complement {
                 .col-sm-6 {
