inclusão de cores, ajustes css para personalização

--- a/assets/css/custom/home.less
+++ b/assets/css/custom/home.less
@@ -6,6 +6,8 @@
     }
 
     form {
+        margin: 20px 0;
+        
         .form-group {
             .group-radios {
                 display: flex;
@@ -47,6 +49,8 @@
             }
 
             .complement {
+                display: flex;
+
                 .col-sm-6 {
                     &:last-child {
                         display: flex;
