--- a/assets/css/custom/home.less
+++ b/assets/css/custom/home.less
@@ -49,7 +49,7 @@
             }
 
             .complement {
-                display: flex;
+                display: none;
 
                 .col-sm-6 {
                     &:last-child {
@@ -62,6 +62,21 @@
                             margin-right: 5px;
                         }
                     }
+                }
+            }
+        }
+
+        #result {
+            .alert {
+                display: flex;
+
+                span {
+                    text-align: center;
+                    text-transform: uppercase;
+                    -webkit-text-stroke-width: .2px;
+                    -webkit-text-stroke-color: #000;
+                    font-size: 16px;
+                    font-weight: 600;
                 }
             }
         }
