registro de publicações, listagem, aprovar pendencias, gerar imagem de aprovados

--- a/assets/css/styles.less
+++ b/assets/css/styles.less
@@ -19,4 +19,6 @@ body {
     // PAGES
     @import './custom/login.less';
     @import './custom/home.less';
+    @import './custom/admin/mural-find-admin.less';
+    @import './custom/admin/print-mural.less';
 }
