--- a/assets/css/custom/admin/mural-find-admin.less
+++ b/assets/css/custom/admin/mural-find-admin.less
@@ -1,16 +1,5 @@
-.home {
-    .title {
-        text-align: center;
-        font-family: 'MsMadi';
-        font-size: 50px;
-    }
-
-    .sub-title {
-        text-align: center;
-        font-family: 'MsMadi';
-        font-size: 30px;
-    }
-
+.mural-find-admin {
+    
     form {
         margin: 20px 0;
         
@@ -25,7 +14,7 @@
                     padding: 10px;
                     border: 1px solid @color-bedroom;
                     border-radius: 5px;
-                    width: 45%;
+                    width: 100%;
                     margin: 5px;
                     display: flex;
                     justify-content: center;
@@ -83,24 +72,6 @@
                     -webkit-text-stroke-color: #000;
                     font-size: 16px;
                     font-weight: 600;
-                }
-            }
-        }
-    }
-}
-
-@media @desktop {
-    .home {
-        form {
-            .form-group {
-                .group-radios {
-                    .radio-inline {
-                        width: 22%;
-
-                        span {
-                            font-size: 14px;
-                        }
-                    }
                 }
             }
         }
