--- a/assets/css/styles.less
+++ b/assets/css/styles.less
@@ -9,7 +9,7 @@
 body {
     background-color: @color-third;
     color: @color-primary;
-    // background-image: url('../img/background.png');
+    background-image: url('../img/parede.png');
 
     @import 'mixins.less';
     @import './custom/loader.less';
@@ -21,4 +21,5 @@ body {
     @import './custom/home.less';
     @import './custom/admin/mural-find-admin.less';
     @import './custom/admin/print-mural.less';
+    @import './custom/admin/home-admin.less';
 }
