--- a/assets/css/mixins.less
+++ b/assets/css/mixins.less
@@ -21,3 +21,120 @@ h1 {
 label, span {
     letter-spacing: 2px;
 }
+
+.img-effect-kiss {
+    position: absolute;
+    z-index: -1;
+    top: 60px;
+    left: 0;
+    display: flex;
+    width: 100%;
+
+    .imgs-kiss, .jovens{
+        flex: 1;
+    }
+
+    .lb {
+        &:first-child {
+            position: absolute;
+            width: 150px;
+            transform: rotate(-35deg);
+            left: 0;
+
+            img {
+                opacity: .5;
+            }
+        }
+        &:last-child {
+            position: absolute;
+            width: 150px;
+            transform: rotate(-35deg);
+            left: 0;
+            z-index: -2;
+        }
+    }
+
+    .jovens {
+        display: flex;
+        flex-direction: column;
+        align-items: end;
+
+        img {
+            width: 100px;
+            margin: 5px 0;
+            opacity: .3;
+
+            &:first-child {
+                transform: rotate(35deg);
+            }
+
+            &:nth-child(2) {
+                transform: rotate(-35deg);
+            }
+
+            &:last-child {
+                transform: rotate(35deg);
+            }
+        }
+    }
+}
+
+@media @desktop {
+    .img-effect-kiss {
+        top: 80px;
+    
+        .lb {
+            &:first-child {
+                width: 350px;
+                left: -45px;
+    
+                img {
+                    opacity: .7;
+                }
+            }
+            &:last-child {
+                width: 320px;
+                left: -120px;
+            }
+        }
+    
+        .jovens {
+            img {
+                width: 200px;
+            }
+        }
+    }
+}
+
+.pulse {
+    transform: scale(1);
+	animation: pulse 2s infinite;
+}
+
+@keyframes pulse {
+	0% {
+		transform: scale(0.95);
+	}
+
+	70% {
+		transform: scale(1);
+	}
+
+	100% {
+		transform: scale(0.95);
+	}
+}
+
+.config {
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    height: 40px;
+    width: 40px;
+    background-color: #FFF;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 50%;
+    box-shadow: 0px 0px 5px;
+}
