--- a/assets/css/mixins.less
+++ b/assets/css/mixins.less
@@ -132,4 +132,8 @@ label, span {
     align-items: center;
     height: 60px;
     padding: 20px;
+
+    .link {
+        margin-left: 5px;
+    }
 }
