--- a/assets/css/custom/admin/print-mural.less
+++ b/assets/css/custom/admin/print-mural.less
@@ -2,6 +2,16 @@
     #result {
         .alert {
             display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            gap: 10px;
+
+            img {
+                width: 60px;
+                height: 60px;
+                border-radius: 50%;
+            }
 
             span {
                 text-align: center;
