--- a/assets/css/mixins.less
+++ b/assets/css/mixins.less
@@ -42,7 +42,7 @@ label, span {
             left: 0;
 
             img {
-                opacity: .5;
+                // opacity: .5;
             }
         }
         &:last-child {
@@ -90,7 +90,7 @@ label, span {
                 left: -45px;
     
                 img {
-                    opacity: .7;
+                    // opacity: .7;
                 }
             }
             &:last-child {
