--- a/assets/css/variables.less
+++ b/assets/css/variables.less
@@ -1,4 +1,5 @@
 @desktop:   ~"only screen and (min-width: 1024px)";
+@mobile:   ~"only screen and (max-width: 780px)";
 
 @color-primary: #2B4162;
 @color-secondy: #385F71;
