--- a/assets/css/custom/home.less
+++ b/assets/css/custom/home.less
@@ -1,4 +1,6 @@
 .home {
+    position: relative;
+
     .signs {
         display: flex;
         background-color: @color-fifth;
@@ -106,7 +108,8 @@
         }
     }
 
-    #mural {
+    #mural,
+    #ca {
         .alert {
             display: flex;
             gap: 10px;
@@ -123,15 +126,31 @@
 
             span {
                 text-align: center;
+                padding: 8px;
+                background-color: rgba(255, 255, 255, .7);
+                border-radius: 5px;
+            }
+        }
+
+        >.list-old {
+            >img,
+            span {
+                opacity: 0.5;
             }
         }
     }
 
     .republish {
         .button-action {
+            background-color: @color-primary;
             position: fixed;
             bottom: 20px;
-            right: 20px;
+            left: 15px;
+            transition: all ease .5s;
+
+            &:hover {
+                box-shadow: 0px 0px 5px;
+            }
         }
     }
 }
