--- a/assets/css/custom/menu.less
+++ b/assets/css/custom/menu.less
@@ -1,6 +1,11 @@
 .navbar {
     background-color: @color-bedroom;
     border: 0;
+    position: fixed;
+    width: 100%;
+    z-index: 1;
+    top: 250px;
+    box-shadow: 0px 0px 6px;
 
     .container {
         background-color: @color-bedroom;
@@ -44,4 +49,8 @@
             }
         }
     }
+}
+
+.container-primary {
+    padding: 340px 0px 0px;
 }
