--- a/assets/css/custom/menu.less
+++ b/assets/css/custom/menu.less
@@ -3,9 +3,10 @@
     border: 0;
     position: fixed;
     width: 100%;
-    z-index: 1;
-    top: 250px;
+    z-index: 9;
+    top: 0;
     box-shadow: 0px 0px 6px;
+    border-radius: unset;
 
     .container {
         background-color: @color-bedroom;
@@ -52,5 +53,5 @@
 }
 
 .container-primary {
-    padding: 340px 0px 0px;
+    padding: 50px 0px 0px;
 }
