--- a/assets/css/custom/header.less
+++ b/assets/css/custom/header.less
@@ -38,6 +38,7 @@
             flex-direction: column;
             justify-content: center;
             align-items: center;
+            background-position: center;
 
             .title {
                 font-size: 25px;
