--- a/assets/css/custom/admin/print-mural.less
+++ b/assets/css/custom/admin/print-mural.less
@@ -20,6 +20,9 @@
                 -webkit-text-stroke-color: #000;
                 font-size: 16px;
                 font-weight: 600;
+                padding: 8px;
+                background-color: rgba(255, 255, 255, .7);
+                border-radius: 5px;
             }
         }
     }
