--- a/assets/css/custom/menu.less
+++ b/assets/css/custom/menu.less
@@ -1,10 +1,10 @@
 .navbar {
     background-color: @color-bedroom;
     border: 0;
-    position: fixed;
-    width: 100%;
+    // position: fixed;
+    // width: 100%;
     z-index: 9;
-    top: 0;
+    // top: 0;
     box-shadow: 0px 0px 6px;
     border-radius: unset;
 
