--- a/assets/css/custom/admin/home-admin.less
+++ b/assets/css/custom/admin/home-admin.less
@@ -2,13 +2,15 @@
     .row {
         .col-sm-6 {
             .mode {
-                .col-sm-6 {
-                    .btn {
-                        margin: 5px 0;
-                    }
-
+                .col-sm-4 {
                     .alert {
                         margin: 0;
+                    }
+
+                    &.action {
+                        i {
+                            font-size: 30px;
+                        }
                     }
                 }
             }
