--- a/assets/css/custom/menu.less
+++ b/assets/css/custom/menu.less
@@ -1,10 +1,6 @@
 .navbar {
     background-color: @color-bedroom;
     border: 0;
-    // position: fixed;
-    // width: 100%;
-    z-index: 9;
-    // top: 0;
     box-shadow: 0px 0px 6px;
     border-radius: unset;
 
@@ -38,7 +34,7 @@
                     a {
                         color: @color-third;
                         font-weight: 600;
-                        font-size: 18px;
+                        font-size: 16px;
                         letter-spacing: 2px;
                         transition: all ease .5s;
 
@@ -53,5 +49,5 @@
 }
 
 .container-primary {
-    padding: 50px 0px 0px;
+    // padding: 10px 0px 0px;
 }
