--- a/assets/css/custom/home.less
+++ b/assets/css/custom/home.less
@@ -6,6 +6,7 @@
     }
 
     .signs {
+        margin-top: 10px;
         display: flex;
         background-color: @color-fifth;
         padding: 10px;
