--- a/assets/css/custom/header.less
+++ b/assets/css/custom/header.less
@@ -2,6 +2,7 @@
     width: 100%;
     max-height: 250px;
     height: 100%;
+    margin-bottom: 20px;
 
     .row {
         background-color: @color-bedroom;
