--- a/assets/css/mixins.less
+++ b/assets/css/mixins.less
@@ -31,7 +31,6 @@ span {
     .jovens {
         flex: 1;
         position: absolute;
-        top: 60px;
 
         @media @mobile {
             top: 320px;
@@ -39,7 +38,8 @@ span {
     }
 
     .imgs-kiss {
-        left: -60px;
+        top: 60px;
+        left: -20px;
     }
 
     .lb {
@@ -68,7 +68,8 @@ span {
         flex-direction: column;
         align-items: end;
         overflow: hidden;
-        right: -60px;
+        right: 0;
+        top: 60px;
 
         img {
             width: 100px;
@@ -95,8 +96,6 @@ span {
 
 @media @desktop {
     .img-effect-kiss {
-        // top: 80px;
-
         .lb {
             &:first-child {
                 transform: rotate(-25deg);
