--- a/assets/css/mixins.less
+++ b/assets/css/mixins.less
@@ -69,7 +69,8 @@ span {
         align-items: end;
         overflow: hidden;
         right: 0;
-        top: 60px;
+        top: 100px;
+        z-index: -1;
 
         img {
             width: 100px;
