--- a/assets/css/mixins.less
+++ b/assets/css/mixins.less
@@ -115,11 +115,14 @@ span {
         }
 
         .imgs-kiss {
-            left: -250px;
+            left: -150px;
+            top: 0;
         }
 
         .jovens {
-            right: -200px;
+            right: -150px;
+            top: 0;
+            z-index: -1;
 
             img {
                 width: 200px;
